--- a/Web_Dev_Udemy/CSS-MySite/index.html
+++ b/Web_Dev_Udemy/CSS-MySite/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Ashwin Raj Singh</title>
+    <meta charset="UTF-8">
+    <title>Ashwin Singh</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" href="favicon.ico">
   </head>
+
   <body>
-    <div class="top-container">
-      <img src="images/cloud.png" alt="cloud-img">
-      <h1>I'm Ashwin</h1>
-      <p>a programming ehthusiast</p>
-      <img src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
-
+    
+    <div class="top_container">
+      <img src="images/cloud.png" alt="cloud-image">
+      <h1 class="heading">I'm Ashwin</h1>
+      <p>student at BITS Pilani, Hyderabad campus</p>
+      <img src="images/cloud.png" alt="cloud-image">
+      <img src="images/mountain.png" alt="mountain-image">
     </div>
 
-    <div class="middle-container">
-
-    </div>
-
-    <div class="bottom-container">
-
-    </div>
   </body>
 </html>
