--- a/Web_Dev_Udemy/DOM/index.html
+++ b/Web_Dev_Udemy/DOM/index.html
@@ -7,8 +7,17 @@
     </head>
 
     <body>
-        <h1>Hello World !!</h1>
+        <h1 id="title">Hello World !!</h1>
+        <input type="checkbox">
+        <button class="button">Click Me</button>
+        <ul id="list">
+            <li class="item"><a href="https://www.youtube.com/">YouTube</a></li>
+            <li class="item">Second</li>
+            <li class="item">Third</li>
+        </ul>
 
-        <script src="index.js"> </script> 
     </body>
+    <footer>
+        <script src="index.js"> </script> 
+    </footer>
 </html>
