--- a/Web_Dev_Udemy/DOM/Dicee Challenge - Starting Files/index.html
+++ b/Web_Dev_Udemy/DOM/Dicee Challenge - Starting Files/index.html
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    &#xA9 Ashwin Singh - 2020
     <script src="index.js"></script>
   </footer>
 </html>
