drum kit created

--- a/Web_Dev_Udemy/DOM/Drum Kit/index.html
+++ b/Web_Dev_Udemy/DOM/Drum Kit/index.html
@@ -23,7 +23,8 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    &#169 Ashwin Singh - 2021
+    <script src="index.js"></script>
   </footer>
 </body>
 
