Rock Paper Scissor added

--- a/Web_Dev_Udemy/DOM/Drum Kit/index.html
+++ b/Web_Dev_Udemy/DOM/Drum Kit/index.html
@@ -24,7 +24,7 @@
 
   <footer>
     &#169 Ashwin Singh - 2021
-    <script src="index.js"></script>
+    <script src="test.js"></script>
   </footer>
 </body>
 
