--- a/Web_Dev_Udemy/simonGame/index.html
+++ b/Web_Dev_Udemy/simonGame/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
   <h1 id="level-title">Press A Key to Start</h1>
   <div class="container">
     <div lass="row">
@@ -35,7 +38,7 @@
 
   </div>
 
-
+  <script src="./game.js"></script>
 </body>
 
 </html>
